feat: implement comparison functions (isBefore, isAfter, isSame, min, max)

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dist/**/*.js",
     "dist/**/*.d.ts",
     "README.md",
-    "LICENSE"
+    "LICENSE.md"
   ],
   "publishConfig": {
     "access": "public"
