--- a/package.json
+++ b/package.json
@@ -40,7 +40,10 @@
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "ci": "npm run typecheck && npm run lint && npm run build",
-    "prepublishOnly": "npm run ci"
+    "prepublishOnly": "npm run ci",
+    "release": "commit-and-tag-version",
+    "release:minor": "commit-and-tag-version --release-as minor",
+    "release:major": "commit-and-tag-version --release-as major"
   },
   "keywords": [
     "temporal",
@@ -66,6 +69,7 @@
   "devDependencies": {
     "@biomejs/biome": "^2.3.8",
     "@vitest/ui": "^4.0.14",
+    "commit-and-tag-version": "^12.6.0",
     "temporal-polyfill": "^0.3.0",
     "tsup": "^8.5.1",
     "typescript": "^5.9.3",
