fix: disable noConsole rule in linter and clean up TypeScript example formatting

--- a/biome.json
+++ b/biome.json
@@ -33,7 +33,7 @@
       },
       "suspicious": {
         "noExplicitAny": "warn",
-        "noConsole": "warn"
+        "noConsole": "off"
       },
       "performance": {
         "noAccumulatingSpread": "warn",
