fix: update includes in biome.json to include examples directory; clean up README.md

--- a/biome.json
+++ b/biome.json
@@ -7,7 +7,7 @@
   },
   "files": {
     "ignoreUnknown": false,
-    "includes": ["src/**/*", "**/*.ts", "**/*.json", "**/*.md"]
+    "includes": ["src/**/*", "examples/**/*", "**/*.ts", "**/*.json", "**/*.md"]
   },
   "formatter": {
     "enabled": true,
