refactor: switch biome to blacklist approach; fix all linting issues
- Remove whitelist approach from biome.json (rely on VCS ignore instead)
- Revert lint scripts to check all files (blacklist approach)
- Format all example JavaScript files (quotes, trailing commas, imports)
- Fix linting issues in docs/index.html (forEach returns, assignments in expressions)
- Fix lint-staged issue where example files weren't being checked

--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,7 @@
     "useIgnoreFile": true
   },
   "files": {
-    "ignoreUnknown": false,
-    "includes": ["src/**/*", "examples/**/*", "**/*.ts", "**/*.json", "**/*.md"]
+    "ignoreUnknown": false
   },
   "formatter": {
     "enabled": true,
