refactor(release): convert update-html-version script from CJS to ESM
Package is configured with 'type: module', so scripts should use ESM too.

--- a/.versionrc.json
+++ b/.versionrc.json
@@ -20,7 +20,7 @@
     },
     {
       "filename": "docs/index.html",
-      "updater": "scripts/update-html-version.cjs"
+      "updater": "scripts/update-html-version.js"
     }
   ]
 }
