build: enforce CI checks (lint, types, coverage) before release

--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
     "test": "vitest",
     "test:run": "vitest run",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest --coverage",
+    "test:coverage": "vitest run --coverage",
     "typecheck": "tsc --noEmit",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "ci": "npm run typecheck && npm run lint && npm run test:run && npm run build",
+    "ci": "npm run typecheck && npm run lint && npm run test:coverage && npm run build",
     "prepublishOnly": "npm run ci",
-    "release": "commit-and-tag-version",
-    "release:minor": "commit-and-tag-version --release-as minor",
-    "release:major": "commit-and-tag-version --release-as major",
+    "release": "npm run ci && commit-and-tag-version",
+    "release:minor": "npm run ci && commit-and-tag-version --release-as minor",
+    "release:major": "npm run ci && commit-and-tag-version --release-as major",
     "prepare": "simple-git-hooks"
   },
   "simple-git-hooks": {
