--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,7 @@
         "noConsole": "off"
       },
       "performance": {
-        "noAccumulatingSpread": "warn",
+        "noAccumulatingSpread": "error",
         "noDelete": "error"
       },
       "correctness": {
