--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
     "prepare": "simple-git-hooks"
   },
   "simple-git-hooks": {
-    "pre-commit": "npx lint-staged"
+    "pre-commit": "npx lint-staged",
+    "commit-msg": "npx commitlint --edit $1"
   },
   "lint-staged": {
     "*.{js,ts,json,md}": [
@@ -84,6 +85,8 @@
   "homepage": "https://kristjanesperanto.github.io/temporal-kit/",
   "devDependencies": {
     "@biomejs/biome": "^2.3.11",
+    "@commitlint/cli": "^20.3.1",
+    "@commitlint/config-conventional": "^20.3.1",
     "@vitest/coverage-v8": "^4.0.16",
     "@vitest/ui": "^4.0.16",
     "commit-and-tag-version": "^12.6.1",
