--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "ci": "npm run typecheck && npm run lint && npm run test:coverage && npm run build",
-    "prepublishOnly": "npm run ci",
-    "release": "npm run ci && commit-and-tag-version",
-    "release:minor": "npm run ci && commit-and-tag-version --release-as minor",
-    "release:major": "npm run ci && commit-and-tag-version --release-as major",
+    "ci": "node --run typecheck && node --run lint && node --run test:coverage && node --run build",
+    "prepublishOnly": "node --run ci",
+    "release": "node --run ci && commit-and-tag-version",
+    "release:minor": "node --run ci && commit-and-tag-version --release-as minor",
+    "release:major": "node --run ci && commit-and-tag-version --release-as major",
     "prepare": "simple-git-hooks"
   },
   "simple-git-hooks": {
