ci: add automated release workflows with npm provenance
Add production-ready release automation with supply-chain security:

Release Workflows:
- Add release.yml for stable releases (latest) triggered by GitHub Releases
- Add release-next.yml for pre-releases (next) with dry-run support
- Implement npm provenance attestations for package integrity
- Add version verification and full CI gates before publishing
- Use least-privilege permissions (OIDC id-token: write)
- Separate stable/pre-release triggers to prevent dual workflow runs

Workflow Consistency:
- Upgrade ci.yml: actions/checkout v5→v6 for consistency
- Upgrade pages.yml: actions/checkout v4→v6, setup-node v4→v6

Documentation:
- Add Supply-Chain Trust section to README.md
- Extend SECURITY.md with trust model and maintainer checklist
- Document publish channels and release flow in CONTRIBUTING.md

Security improvements:
- CI-based publishing replaces local npm publish
- Provenance attestations enable package verification
- Tag-version verification prevents accidental publishes
- Least-privilege workflow permissions

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "commit-msg": "npx commitlint --edit $1"
   },
   "lint-staged": {
-    "*.{js,ts,json,md}": [
+    "*.{js,ts,json}": [
       "biome check --write"
     ]
   },
